Contrast Error css fix

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -115,6 +115,7 @@ h2 {
 #hero h1 {
   position: absolute;
   color: #D0D0D0;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
   margin-top: 0.75rem;
   text-align: center;
   right: 1em;
